rgbds-0.6.1/test/asm/redef-equ.err
error: redef-equ.asm(23):
    'N' already defined as non-EQU at redef-equ.asm(22)
error: Assembly aborted (1 error)!
